# linux-toolchain

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  MANIFEST.in  Makefile  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  artifact-formats.md  build-gcc-runtime.md  cli-reference.md  compatibility.md  integrations.md  licensing.md  managed-compilers.md  recipe-catalog.md  smoke-project.md  troubleshooting.md
docs/zh-CN/: README.md  architecture.md  artifact-formats.md  build-gcc-runtime.md  cli-reference.md  compatibility.md  integrations.md  licensing.md  managed-compilers.md  recipe-catalog.md  smoke-project.md  troubleshooting.md
examples/: README.md  README.zh-CN.md
examples/managed/: compiler-matrix.json
examples/sdk/: glibc-2.19-x86_64.json  glibc-2.36-aarch64.json
src/linux_toolchain/: __init__.py  __main__.py  _runtime_runner.py  bundle.py  bundle_installer.py  cli.py  cli_parser.py  container.py  diagnostics.py  errors.py  integrity.py  licenses.py  models.py  process.py  producer_store.py  publication.py  recipes.py  schema.py  setup.py  setup_models.py  smoke.py  terminal.py  versions.py
src/linux_toolchain/compiler/: __init__.py  binding.py  managed.py  managed_binding.py  runtime_binding.py  toolchain.py
src/linux_toolchain/conan/: __init__.py  settings.py
src/linux_toolchain/elf/: __init__.py  audit.py  compatibility.py  models.py  reader.py
src/linux_toolchain/integrations/: __init__.py  _cmake.py  _io.py  cmake.py  conan.py  models.py  render.py  shell.py
src/linux_toolchain/managed/: __init__.py  artifacts.py  assemble.py  build_script_common.py  builder.py  catalog.py  contracts.py  gcc_build_script.py  identity.py  llvm_build_script.py  lockfile.py  models.py  publication.py  scripts.py  selection.py  sources.py
src/linux_toolchain/resources/: __init__.py  builder.Dockerfile
src/linux_toolchain/resources/smoke-project/: CMakeLists.txt  Makefile  conanfile.py
src/linux_toolchain/resources/smoke-project/src/: smoke_asm.S  smoke_library.cpp  smoke_library.h  smoke_main.cpp
src/linux_toolchain/runtime/: __init__.py  _import_common.py  _manifest_common.py  importer.py  llvm.py  llvm_models.py  models.py
src/linux_toolchain/sdk/: __init__.py  crosstool_ng.py
tests/: __init__.py  binding_fixtures.py  test_binding_generation.py  test_binding_validation.py  test_bundle.py  test_cli.py  test_compiler_detection.py  test_compiler_kit.py  test_conan_settings.py  test_crosstool_ng.py  test_diagnostics.py  test_elf_audit.py  test_licenses.py  test_llvm_runtime.py  test_managed_assemble.py  test_managed_builder.py  test_managed_catalog.py  test_managed_lockfile.py  test_managed_models.py  test_managed_publication.py  test_models.py  test_process.py  test_producer_store.py  test_publication.py  test_recipes.py  test_runtime_import.py  test_setup.py  test_smoke_project.py  test_versions.py
tests/consumers/: __init__.py
tests/consumers/bolt/: README.md  __init__.py  acceptance.py  test_acceptance.py
tests/fixtures/policies/: aarch64-glibc-2.18.json  x86_64-glibc-2.18.json
tests/fixtures/readelf/: gnu-aarch64.txt  gnu-x86_64.txt  llvm-x86_64.txt
